--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>jQuery Express Node Starter</title>
+        <script src="vendors/jquery-3.2.1.min.js"></script>
+        <script src="client.js"></script>
     </head>
     <body>
         <h1>jQuery Express Node Starter</h1>
