--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
         <title>jQuery Express Node Starter</title>
         <script src="vendors/jquery-3.2.1.min.js"></script>
         <script src="client.js"></script>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>jQuery Express Node Starter</h1>
