--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,10 @@
     </head>
     <body>
         <h1>jQuery Express Node Starter</h1>
+        <input type="text" placeholder='Enter a name here!' id='nameInput'>
+        <input type='text' placeholder='Enter your message here!' id='messageInput'>
+        <button id='sendMessageButton'>Enter a message!</button>
+
+        <div id='messageDiv'></div>
     </body>
 </html>
